updated so changing labels saves correctly